tdf#126394 Allow changing animations for several objects at once

Change-Id: Ia1adea3492f5b7b4e4d217a5fd338c69759259d0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/97619
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>